Fix Payment form input fields UI on IE and Chrome Browser

--- a/css/main.css
+++ b/css/main.css
@@ -3345,7 +3345,6 @@ embed {
     background-color: #e3e5e6; }
   .charitable-form-fields .charitable-fieldset .charitable-form-header {
     position: relative;
-    float: left;
     clear: both;
     left: 24px;
     left: 2.4rem;
